src/components/Movie/Movie.css
.info {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

.Movie {
    max-width: 1500px;
    width: 90%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

